require Mongodb to seed data

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "hapi": "^8.4.0",
     "joi": "^6.4.1",
     "mongoose": "^4.0.2"
+  },
+  "devDependencies": {
+    "mongodb": "^2.0.28"
   }
 }
