--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bell": "^2.7.0",
     "hapi": "^8.4.0",
+    "hapi-auth-cookie": "^2.2.0",
     "joi": "^6.4.1",
     "mongoose": "^4.0.2"
   },
