--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "mongoose": "^4.0.2"
   },
   "devDependencies": {
-    "mongodb": "^2.0.28"
+    "mocha": "^2.2.4",
+    "mongodb": "^2.0.28",
+    "should": "^6.0.1"
   }
 }
